--- a/Ejercicios/Ejercicio JavaScript Web/style.css
+++ b/Ejercicios/Ejercicio JavaScript Web/style.css
@@ -10,7 +10,8 @@ h1 {
 
 .dog-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
