counter corrected and close button added

--- a/proyectsJs/cook-timer/style.css
+++ b/proyectsJs/cook-timer/style.css
@@ -60,8 +60,10 @@ body {
   border-radius: 10px;
   background-color: #f7ede2;
   border: #f6bd60 5px dotted;
+  position: relative;
 }
 
+/* Buttons & Properties */
 .egg-container--button {
   background-color: #f5cac3;
   padding: 20px;
@@ -116,6 +118,23 @@ body {
 
 .counter-container--button-img {
   width: 30px;
+}
+
+.button__close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: none;
+  border: none;
+  font-size: 18px;
+  color: #f6bd60;
+  cursor: pointer;
+}
+
+.button__close:hover {
+  color: #84a59d;
+  font-weight: 800;
+  transform: scale(1.1);
 }
 
 /* Font-Size */
