--- a/proyectsJs/cook-timer/style.css
+++ b/proyectsJs/cook-timer/style.css
@@ -77,6 +77,19 @@ body {
   border: 2px dotted #f6bd60;
 }
 
+.ingredients-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ingredients-container--text {
+  padding: 10px;
+  background-color: #f6bd608f;
+  border: 1px dotted #f6bd60;
+  color: #f7ede2;
+  font-size: 12px;
+}
+
 /* Buttons & Properties */
 .egg-container--button {
   background-color: #f5cac3;
