--- a/proyectsJs/cook-timer/style.css
+++ b/proyectsJs/cook-timer/style.css
@@ -138,6 +138,46 @@ body {
   width: 350px;
 }
 
+.text-decoration {
+  text-decoration: none;
+}
+
+.text-decoration:hover {
+  text-decoration: underline;
+}
+
+.receipe-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+  background-color: #f6bd6048;
+  border: 3px dotted #f6bd60;
+  color: #f6bd60;
+  border-radius: 10px;
+  transition: all ease 0.3s;
+  text-decoration: none;
+}
+
+.receipe-card:hover {
+  transform: scale(1.02);
+
+  border-color: #84a59d;
+}
+
+.receipe-name {
+  margin: 0;
+}
+
+.receipe-category {
+  background-color: #f7ede2;
+  padding: 3px;
+  border: 2px dotted #f6bd60;
+  border-radius: 4px;
+  margin: 0;
+}
+
 /* Buttons & Properties */
 .egg-container--button {
   background-color: #f5cac3;
@@ -315,6 +355,10 @@ body {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+.display__flex-basic {
+  display: flex;
 }
 
 .display__flex-space-between {
