--- a/proyectsJs/calling-panel/style.css
+++ b/proyectsJs/calling-panel/style.css
@@ -39,6 +39,33 @@ body {
   padding: 10px;
 }
 
+.event-card--sub-section {
+  background-color: rgb(185, 184, 184);
+  padding: 2px;
+  border-radius: 5px;
+}
+
+.sub-section--title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: 4px;
+}
+
+.sub-section--container {
+  background-color: white;
+  border: 1px solid #3c3c3c;
+}
+
+.sub-section--container__title {
+  font-size: 12px;
+  color: #ff8000;
+}
+
+.sub-section--select-number {
+  border: 1px solid #3c3c3c;
+  border-radius: 2px;
+}
+
 .event-card--text__title {
   margin: 6px 0;
 }
