--- a/proyectsJs/calling-panel/style.css
+++ b/proyectsJs/calling-panel/style.css
@@ -51,6 +51,7 @@ body {
   background-color: rgb(185, 184, 184);
   padding: 6px;
   border-radius: 0 5px 5px 5px;
+  display: none;
 }
 
 .sub-section--title {
