--- a/proyectsJs/calling-panel/style.css
+++ b/proyectsJs/calling-panel/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  background: linear-gradient(90deg, #0b4052 0%, #f0e0d6 100%);
+  background: linear-gradient(180deg, #0b4052 0%, #f0e0d6 100%);
 }
 
 body {
@@ -190,13 +190,13 @@ body {
 }
 
 .rating-container {
-  padding: 10px 0;
-  width: 80px;
-  font-size: 36px;
+  padding: 20px 10px;
+  color: white;
+  font-size: 48px;
   font-weight: 700;
-  border-radius: 6px;
-  border: 2px solid #ff8000;
+  border-radius: 10px;
   text-align: center;
+  min-width: 100px;
 }
 
 /* Personalized buttons */
