--- a/proyectsJs/calling-panel/style.css
+++ b/proyectsJs/calling-panel/style.css
@@ -499,3 +499,63 @@ body {
     flex: 0 0 calc(20% - 10px);
   }
 } */
+
+/* Container Colors Animation */
+
+.gradient-green {
+  background: linear-gradient(334deg, #c8c3c3, #40ab16);
+  background-size: 180% 180%;
+  animation: gradient-animation 6s ease infinite;
+}
+
+/* .gradient-yellow {
+	width: 100vw;
+	height: 100vh;
+	background: linear-gradient(334deg, #c8c3c3, #B89233, #AB9C16);
+	background-size: 180% 180%;
+	animation: gradient-animation 6s ease infinite;
+}
+
+.gradient-red {
+	width: 100vw;
+	height: 100vh;
+	background: linear-gradient(334deg, #c8c3c3, #93405D, #812433);
+	background-size: 180% 180%;
+	animation: gradient-animation 6s ease infinite;
+} */
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
